WRR-28139: Fixed vertical tab padding in TabLayout and buttons width for largeText and RTL locale (#119)
### Checklist

* [x] I have read and understand the [contribution
guide](https://enactjs.com/docs/developer-guide/contributing/)
* [x] A [CHANGELOG
entry](https://enactjs.com/docs/developer-guide/contributing/changelogs/)
is included
* [ ] At least one test case is included for this feature or bug fix
* [x] Documentation was added or is not needed
* [ ] This is an API breaking change

### Issue Resolved / Feature Added
[//]: # (Describe the issue resolved or feature added by this pull
request)
Icons are cropped in TabLayout, Panels, PopupTabLayout when
largeText=true.

### Resolution
[//]: # (Does the code work as intended?)
[//]: # (What is the impact of this change and *why* was it made?)
Fixed vertical tab padding in TabLayout, for collapsed tab which has
icon
Fixed Button width for iconOnly and large-text, as well as for RTL
locale
Fixed Header backButton dimensions for largeText

### Additional Considerations
[//]: # (How should the change be tested?)
[//]: # (Are there any outstanding questions?)
[//]: # (Were any side-effects caused by the change?)
TabLayout: GUI shows a 48px padding-right when tab is collapsed, but the
padding overlaps the icon, so I consider the GUI is not correct.
Added min-width for Picker buttons in order to not be affected by
current change

### Links
[//]: # (Related issues, references)
WRR-28139

### Comments

Enact-DCO-1.0-Signed-off-by: Daniel Stoian daniel.stoian@lgepartner.com

---------

--- a/Button/Button.module.less
+++ b/Button/Button.module.less
@@ -212,6 +212,10 @@
 	&.iconOnly {
 		min-width: @lime-button-height;
 
+		.lime-custom-text({
+			min-width: @lime-button-height-large;
+		});
+
 		.client {
 			padding: 0;
 
@@ -220,14 +224,25 @@
 			}
 		}
 
-		&.iconAfter,
-		&.iconBefore,
-		&.large,
+		&.large {
+			padding: @lime-button-icon-padding; // adjust the padding to center the icon because of the existence of `Marquee` as a sibling even if there are no children in `Marquee`
+			.padding-start-end(.extract(@lime-button-icon-padding, left)[], .extract(@lime-button-icon-padding, right)[]);
+		}
+
 		&.small {
 			min-width: @lime-button-small-height;
 			padding: @lime-button-icon-small-padding;
 			.padding-start-end(.extract(@lime-button-icon-small-padding, left)[], .extract(@lime-button-icon-small-padding, right)[]);
 
+			.lime-custom-text({
+				min-width: @lime-button-small-height-large;
+			});
+		}
+
+		&.iconAfter,
+		&.iconBefore,
+		&.large,
+		&.small {
 			.icon {
 				margin: 0; // reset margins for `IconButton`
 
@@ -245,10 +260,6 @@
 					height: @lime-button-icon-only-colordot-height;
 				}
 			}
-		}
-
-		&.large {
-			padding: @lime-button-icon-padding; // adjust the padding to center the icon because of the existence of `Marquee` as a sibling even if there are no children in `Marquee`
 		}
 
 		&.red,
